kube-prometheus/network-policies/grafana-network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app.kubernetes.io/component: grafana
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 9.5.3
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: grafana
      app.kubernetes.io/name: grafana
      app.kubernetes.io/part-of: kube-prometheus
  ingress:
    - ports:
        - protocol: TCP
          port: 3000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx
          namespaceSelector:
            matchLabels:
              networking/namespace: ingress-nginx
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
