kube-prometheus/network-policies/prometheus-k8s-network.yml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: prometheus-k8s
  namespace: monitoring
  labels:
    app.kubernetes.io/component: prometheus
    app.kubernetes.io/instance: k8s
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/part-of: kube-prometheus
    app.kubernetes.io/version: 2.46.0
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus
      app.kubernetes.io/instance: k8s
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/part-of: kube-prometheus
  ingress:
    - ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-adapter
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
    - ports:
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus-adapter
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: grafana
    - ports:
        - protocol: TCP
          port: 9090
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: ingress-nginx
          namespaceSelector:
            matchLabels:
              networking/namespace: ingress-nginx
  egress:
    - {}
  policyTypes:
    - Egress
    - Ingress
